Fix heading spacing in annoucements section

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -210,7 +210,7 @@ p {
 	&__container {
 		display: grid;
 		grid-template-columns: 1fr;
-		grid-template-rows: auto;
+		grid-template-rows: auto 1fr;
 
 		background-color: lightblue;
 	}
